# Summrize

./: .gitignore  LICENSE  README.md  install_and_test.sh  pyproject.toml
src/summrize/: __init__.py  main.py
